--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
                 <p><a href="https://karlsune.org">this site</a></p>
                 <p><a href="https://www.instagram.com/karlsune.s/">instagram</a></p>
                 <p><a href="https://www.linkedin.com/in/karlsune/">linkedIn</a></p>
+                <h2>#js-showcase</h2>
+                <p><a href="./game/game.html">simple game</a></p>
+                <p><a href="./phonytronix-screensaver.html">animated screensaver</a></p>
+                <p><a href="./animated-dopamine-bg.html">animated screensaver 2</a></p>
+
             </section>
         </main>
     </div>
