--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 <p><a href="https://www.linkedin.com/in/karlsune/">linkedIn</a></p>
                 <h2>#js-showcase</h2>
                 <p><a href="./game/game.html">simple game</a></p>
-                <p><a href="./phonytronix-screensaver.html">animated screensaver</a></p>
-                <p><a href="./animated-dopamine-bg.html">animated screensaver 2</a></p>
+                <p><a href="./phonytronix-screensaver.html">animated-screensaver</a></p>
+                <p><a href="./animated-dopamine-bg.html">animated-screensaver-2</a></p>
 
             </section>
         </main>
