--- a/index.html
+++ b/index.html
@@ -153,12 +153,14 @@
             
             <section id="links">
                 <h2>#links</h2>
-                <p><a href="https://github.com/karlsune">gitHub</a></p>
-                <p><a href="https://karlsune.org">this site</a></p>
+                <p><a href="https://github.com/karlsune">github</a></p>
                 <p><a href="https://www.instagram.com/karlsune.s/">instagram</a></p>
-                <p><a href="https://www.linkedin.com/in/karlsune/">linkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/karlsune/">linkedin</a></p>
+                <p><a href="https://www.pexels.com/sv-se/@karl-sune-666309596/">photography</a></p>
+                <p><a href="https://karlsune.org">this-site</a></p>
+
                 <h2>#js-showcase</h2>
-                <p><a href="./game/game.html">simple game</a></p>
+                <p><a href="./game/game.html">simple-game</a></p>
                 <p><a href="./phonytronix-screensaver.html">animated-screensaver</a></p>
                 <p><a href="./animated-dopamine-bg.html">animated-screensaver-2</a></p>
 
