--- a/connect-the-dots-bg.html
+++ b/connect-the-dots-bg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kick.com Stream Animated Background</title>
+  <title>Animated Background</title>
   <style>
     html, body {
       margin: 0;
