--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                 <p><a href="./game/game.html">simple-game</a></p>
                 <p><a href="./phonytronix-screensaver.html">animated-screensaver</a></p>
                 <p><a href="./animated-dopamine-bg.html">animated-screensaver-2</a></p>
+                <p><a href="./connect-the-dots-bg.html">animated-screensaver-3</a></p>
 
             </section>
         </main>
