index more pages

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 <p><a href="./animated-dopamine-bg.html">animated-screensaver-2</a></p>
                 <p><a href="./cosmic-background.html">animated-screensaver-3</a></p>
                 <p><a href="./connect-the-dots-bg.html">animated-screensaver-4</a></p>
+                <p><a href="./stream-initialzing.html">generative-art-1</a></p>
 
             </section>
         </main>
